WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141852
API::String should just be a simple wrapper for WTF strings
https://bugs.webkit.org/show_bug.cgi?id=141852
Summary
API::String should just be a simple wrapper for WTF strings
Anders Carlsson
Reported
2015-02-20 12:52:08 PST
API::String should just be a simple wrapper for WTF strings
Attachments
Patch
(6.38 KB, patch)
2015-02-20 12:52 PST
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(6.48 KB, patch)
2015-02-20 12:54 PST
,
Anders Carlsson
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-02-20 12:52:57 PST
Created
attachment 246989
[details]
Patch
Anders Carlsson
Comment 2
2015-02-20 12:54:47 PST
Created
attachment 246990
[details]
Patch
Anders Carlsson
Comment 3
2015-02-20 13:09:25 PST
Committed
r180449
: <
http://trac.webkit.org/changeset/180449
>
Carlos Alberto Lopez Perez
Comment 4
2015-02-20 14:58:52 PST
(In reply to
comment #3
)
> Committed
r180449
: <
http://trac.webkit.org/changeset/180449
>
This broke the GTK build:
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20%28Build%29/builds/55778/steps/compile-webkit/logs/stdio
Last 500 characters of output: quest.cpp.o -c ../../Source/WebKit2/UIProcess/API/gtk/WebKitFileChooserRequest.cpp ../../Source/WebKit2/UIProcess/API/gtk/WebKitFileChooserRequest.cpp: In function 'const gchar* const* webkit_file_chooser_request_get_selected_files(WebKitFileChooserRequest*)': ../../Source/WebKit2/UIProcess/API/gtk/WebKitFileChooserRequest.cpp:357:26: error: 'class API::String' has no member named 'isEmpty' if (webFileName->isEmpty()) ^
Carlos Alberto Lopez Perez
Comment 5
2015-02-20 17:49:10 PST
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Committed
r180449
: <
http://trac.webkit.org/changeset/180449
> > > This broke the GTK build: > >
https://build.webkit.org/builders/GTK%20Linux%2064
- > bit%20Release%20%28Build%29/builds/55778/steps/compile-webkit/logs/stdio > > Last 500 characters of output: > quest.cpp.o -c > ../../Source/WebKit2/UIProcess/API/gtk/WebKitFileChooserRequest.cpp > ../../Source/WebKit2/UIProcess/API/gtk/WebKitFileChooserRequest.cpp: In > function 'const gchar* const* > webkit_file_chooser_request_get_selected_files(WebKitFileChooserRequest*)': > ../../Source/WebKit2/UIProcess/API/gtk/WebKitFileChooserRequest.cpp:357:26: > error: 'class API::String' has no member named 'isEmpty' > if (webFileName->isEmpty()) > ^
Build fix landed in
r180469
<
https://trac.webkit.org/r180469
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug