API::String should just be a simple wrapper for WTF strings https://bugs.webkit.org/show_bug.cgi?id=141852

Reviewed by Beth Dakin.

Expose a StringView member function on API::String. Move all the WKString API implementations to WKString.cpp.

* Shared/API/APIString.h:
* Shared/API/c/WKString.cpp:
(WKStringIsEmpty):
(WKStringGetLength):
(WKStringGetCharacters):
(WKStringGetMaximumUTF8CStringSize):
(WKStringGetUTF8CString):
(WKStringIsEqual):
(WKStringIsEqualToUTF8CString):
(WKStringIsEqualToUTF8CStringIgnoringCase):

Canonical link: https://commits.webkit.org/159883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180449 268f45cc-cd09-0410-ab3c-d52691b4dbfc